# AsistentVirtual

./: README.md  docker-compose-prod.yml  docker-compose.yml
.github/mock-embedding-service/: main.py
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Cargo.toml  Dockerfile
backend/dev/: Cargo.toml
backend/dev/src/: main.rs
backend/migrations/: 20260305111648_users.sql  20260305111931_documents.sql  20260312000000_refresh_tokens.sql  20260326000000_document_chunks.sql
backend/src/: auth.rs  chat.rs  common.rs  documents.rs  main.rs
backend/src/tests/: auth.rs  documents.rs  integration_test.rs  mod.rs
documentation/: components.uml  usecase.uml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AppAuth.tsx  Dashboard.tsx  index.css
frontend/src/types/: auth.ts
frontend/src/utils/: auth.ts  password.ts
