[package]
name = "AsistentVirtual-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
diesel = "2.3.6"
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
tower-sessions = "0.15.0"
