[package]
name = "AsistentVirtual-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }

# Postgres + SQLx
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "migrate"] }

# Tokens, IDs, time, config, errors
uuid = { version = "1.12.1", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["serde", "macros"] }
jsonwebtoken = "9.3.0"
thiserror = "2.0.12"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
