[package]
name = "AsistentVirtual-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls", "stream"] }
async-openai = { git = "https://github.com/BouncyMaster/async-openai.git", branch = "fix-missing-field-action", features = ["full"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
pdf_oxide = "0.3.17"
docx-lite = "0.2.0"
pgvector = { version = "0.4", features = ["sqlx"] }

# Postgres + SQLx
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "migrate"] }

# Tokens, IDs, time, config, errors
uuid = { version = "1.12.1", features = ["v4", "serde"] }
time = { version = "0.3.36", features = ["serde", "macros"] }
jsonwebtoken = "9.3.0"
thiserror = "2.0.12"
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower = "0.5.3"
